# MySoftRender

./: .gitignore  AMBIENT_SHADING_TASK.md  CMakeCache.txt  CMakeLists.txt  CONVERSATION_LOG.md  Makefile  PCF_PCSS_IMPLEMENTATION.md  README.md  TODO.md  cmake_install.cmake  compile_commands.json  mySoftRender
.cmake/api/v1/reply/: cache-v2-4257a1682493aa2af2b8.json  cache-v2-ed9bc16013251547e56a.json  cmakeFiles-v1-32b2b4ee03e94ac258b8.json  cmakeFiles-v1-95f31c9db0e450b84371.json  codemodel-v2-1702621fc3ab7588c942.json  codemodel-v2-3ff98e8e23cc9c478b65.json  index-2026-03-29T08-36-11-0102.json  index-2026-03-29T09-24-14-0458.json  target-glm-Debug-4dc804c353aa74913800.json  target-imgui_sdl-Debug-08586a7b2c78aeb3e09c.json  target-mySoftRender-Debug-587798d584a5478c9787.json  target-mySoftRender-Debug-96eddeaed4a886f7d746.json  target-stb_image_wrapper-Debug-eda2efd5b4614657f96c.json
.github/: copilot-instructions.md
assets/cubemap/Indoor/: transport.txt
include/: Camera.h  Cube.h  DebugUI.h  Light.h  Material.h  MeshObject.h  ObjLoader.h  Object.h  Rasterizer.h  RenderThreadPool.h  Scene.h  Sphere.h  Texture.h  Triangle.h  software_renderer.h
src/: DebugUI.cpp  Light.cpp  ObjLoader.cpp  Object.cpp  Rasterizer.cpp  RenderThreadPool.cpp  Scene.cpp  Sphere.cpp  Texture.cpp  main.cpp  software_renderer.cpp
utility/: SkyboxLutBakerMain.cpp  SkyboxLutGenerator.cpp  SkyboxLutGenerator.h  SkyboxSpecularLodBakerMain.cpp
